# CourseWork3

./: README.md  main.py  pyproject.toml
src/: connct_to_api.py  connect_to_db.py  dbmanager.py  functiins.py
